--- a/contactos.css
+++ b/contactos.css
@@ -100,6 +100,26 @@ body {
     position: relative;
 }
 
+.nav-enlace {
+    background: blue;
+    color: black;
+    padding-left: ;
+    align-items: end;
+}
+
+nav {
+    background: grey;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    margin-left: auto;
+}
+
+.headermicrosite {
+    display: flex;
+    background: grey;
+}
+
 @media only screen and (max-width: 620px) {
     .container {
         display: block;
