--- a/contactos.css
+++ b/contactos.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body {
     margin: 0;
     padding: 0;
@@ -104,7 +103,7 @@ body {
 .nav-enlace {
     background: blue;
     color: black;
-    padding-left: ;
+    /* padding-left: ; */
     align-items: end;
 }
 
@@ -140,130 +139,129 @@ nav {
         margin-top: -400px;
     }
 }
-=======
-        body {
-            margin: 0;
-            padding: 0;
-        }
-        
-        .header {
-            height: 250px;
-            width: 100%;
-            background-image: URL("https://raw.githubusercontent.com/RaulRodrigues06/microsite2020/main/pagina-contactos/images/pattern-bg.png");
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        
-        .header_container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-        
-        .caixa_busqueda {
-            border-radius: 7px;
-            border-top-right-radius: 0px;
-            border-bottom-right-radius: 0px;
-            border: none;
-            padding: 10px;
-            width: 350px;
-        }
-        
-        .button_busqueda {
-            margin-left: -6px;
-            background-color: black;
-            color: white;
-            border-top-right-radius: 7px;
-            border-bottom-right-radius: 7px;
-            border: none;
-            padding: 10px 15px;
-        }
-        
-        .algo {
-            display: flex;
-        }
-        
-        .information_box {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: -40px;
-        }
-        
-        .information_container {
-            border: 1px solid black;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 15px;
-            border-radius: 7px;
-            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-            background-color: white;
-            z-index: 100;
-            position: relative;
-        }
-        
-        .box_container {
-            border-right: 1px solid black;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: flex-start;
-            padding: 10px 30px;
-            background-color: white;
-        }
-        
-        .box_container:last-child {
-            border-right: none;
-        }
-        
-        .letras {
-            color: black;
-            font-weight: 900;
-            font-size: larger;
-        }
-        
-        .information_h3 {
-            color: gray;
-            font-size: small;
-        }
-        
-        .mapa {
-            background-image: URL("imagembrooklyn.png");
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: calc(100vh - 245px);
-            background-repeat: no-repeat;
-            background-size: cover;
-            margin-top: -115px;
-            z-index: 10;
-            position: relative;
-        }
-        
-        @media only screen and (max-width: 620px) {
-            .container {
-                display: block;
-            }
-            .information_box {
-                display: block;
-                margin-left: 15px;
-                margin-right: 15px;
-                border-right: none;
-            }
-            .mapa {
-                display: block;
-                margin-top: -400px;
-            }
-            .information_container {
-                display: block;
-            }
-            .box_container {
-                border-right: none;
-            }
-        }
->>>>>>> 6229d25bd6e5b1dc74ba022150534cb4dba76d82
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.header {
+    height: 250px;
+    width: 100%;
+    background-image: URL("https://raw.githubusercontent.com/RaulRodrigues06/microsite2020/main/pagina-contactos/images/pattern-bg.png");
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.header_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.caixa_busqueda {
+    border-radius: 7px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border: none;
+    padding: 10px;
+    width: 350px;
+}
+
+.button_busqueda {
+    margin-left: -6px;
+    background-color: black;
+    color: white;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+    border: none;
+    padding: 10px 15px;
+}
+
+.algo {
+    display: flex;
+}
+
+.information_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -40px;
+}
+
+.information_container {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 7px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    z-index: 100;
+    position: relative;
+}
+
+.box_container {
+    border-right: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 10px 30px;
+    background-color: white;
+}
+
+.box_container:last-child {
+    border-right: none;
+}
+
+.letras {
+    color: black;
+    font-weight: 900;
+    font-size: larger;
+}
+
+.information_h3 {
+    color: gray;
+    font-size: small;
+}
+
+.mapa {
+    background-image: URL("imagembrooklyn.png");
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 245px);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: -115px;
+    z-index: 10;
+    position: relative;
+}
+
+@media only screen and (max-width: 620px) {
+    .container {
+        display: block;
+    }
+    .information_box {
+        display: block;
+        margin-left: 15px;
+        margin-right: 15px;
+        border-right: none;
+    }
+    .mapa {
+        display: block;
+        margin-top: -400px;
+    }
+    .information_container {
+        display: block;
+    }
+    .box_container {
+        border-right: none;
+    }
+}
