--- a/social_media.css
+++ b/social_media.css
@@ -188,3 +188,13 @@ body {
     left: 10px;
     top: -32px;
 }
+
+@media (max-width: 500px) {
+    .social,
+    .facebook,
+    .twitter,
+    .instagram,
+    .youtube {
+        display: block;
+    }
+}
